// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: lg breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 40,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 12,
  },
  "chartHeight": 200,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: md breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 40,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 14,
  },
  "chartHeight": 400,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: sm breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 50,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 14,
  },
  "chartHeight": 400,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: xl breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 30,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 8,
  },
  "chartHeight": 200,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: xl2 breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 20,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 8,
  },
  "chartHeight": 200,
}
`;

exports[`RhelGraphCard Component should have specific breakpoint styles based on state: xs breakpoint 1`] = `
Object {
  "chartBarLabelComponentHeight": 60,
  "chartBarLabelComponentStyle": Object {
    "fontSize": 14,
  },
  "chartHeight": 400,
}
`;

exports[`RhelGraphCard Component should render a non-connected component: non-connected 1`] = `
<RhelGraphCard
  breakpoints={Object {}}
  currentBreakpoint=""
  endDate={2019-07-20T23:59:59.999Z}
  error={false}
  fulfilled={false}
  getGraphReports={[Function]}
  graphData={
    Object {
      "usage": Array [],
    }
  }
  pending={false}
  startDate={2019-06-20T00:00:00.000Z}
  t={[Function]}
>
  <Card
    className="curiosity-usage-graph fadein"
  >
    <article
      className="pf-c-card curiosity-usage-graph fadein"
    >
      <CardHead>
        <div
          className="pf-c-card__head"
        >
          <h2>
            Daily CPU socket usage
          </h2>
          <CardActions>
            <div
              className="pf-c-card__actions"
            >
              <Label
                className="curiosity-usage-graph-label"
              >
                <span
                  className="pf-c-label curiosity-usage-graph-label"
                >
                  Last 30 Days
                </span>
              </Label>
            </div>
          </CardActions>
        </div>
      </CardHead>
    </article>
  </Card>
</RhelGraphCard>
`;

exports[`RhelGraphCard Component should render multiple states: error shows zeroed bar values 1`] = `
Object {
  "chartBarData": Array [
    Object {
      "label": "5 sockets on Jun 1",
      "x": "Jun 1",
      "y": 5,
    },
    Object {
      "label": "0 sockets on Jun 2
 -5 from previous day",
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 3",
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 4",
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 5",
      "x": "Jun 5",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 6",
      "x": "Jun 6",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 7",
      "x": "Jun 7",
      "y": 0,
    },
    Object {
      "label": "7 sockets on Jun 8
 +7 from previous day",
      "x": "Jun 8",
      "y": 7,
    },
    Object {
      "label": "0 sockets on Jun 9
 -7 from previous day",
      "x": "Jun 9",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 10",
      "x": "Jun 10",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 11",
      "x": "Jun 11",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 12",
      "x": "Jun 12",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 13",
      "x": "Jun 13",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 14",
      "x": "Jun 14",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 15",
      "x": "Jun 15",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 16",
      "x": "Jun 16",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 17",
      "x": "Jun 17",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 18",
      "x": "Jun 18",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 19",
      "x": "Jun 19",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 20",
      "x": "Jun 20",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 21",
      "x": "Jun 21",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 22",
      "x": "Jun 22",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 23",
      "x": "Jun 23",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 24",
      "x": "Jun 24",
      "y": 0,
    },
    Object {
      "label": "3 sockets on Jun 25
 +3 from previous day",
      "x": "Jun 25",
      "y": 3,
    },
    Object {
      "label": "0 sockets on Jun 26
 -3 from previous day",
      "x": "Jun 26",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 27",
      "x": "Jun 27",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 28",
      "x": "Jun 28",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 29",
      "x": "Jun 29",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 30",
      "x": "Jun 30",
      "y": 0,
    },
  ],
}
`;

exports[`RhelGraphCard Component should render multiple states: fulfilled 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Label
        className="curiosity-usage-graph-label"
      >
        Last 30 Days
      </Label>
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-stack-chart-container"
    >
      <Chart
        domain={
          Object {
            "x": Array [
              0,
              31,
            ],
          }
        }
        domainPadding={
          Object {
            "x": Array [
              10,
              2,
            ],
            "y": Array [
              1,
              1,
            ],
          }
        }
        height={400}
      >
        <ChartStack>
          <ChartBar
            data={
              Array [
                Object {
                  "label": "5 sockets on Jun 1",
                  "x": "Jun 1",
                  "y": 5,
                },
                Object {
                  "label": "0 sockets on Jun 2
 -5 from previous day",
                  "x": "Jun 2",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 3",
                  "x": "Jun 3",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 4",
                  "x": "Jun 4",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 5",
                  "x": "Jun 5",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 6",
                  "x": "Jun 6",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 7",
                  "x": "Jun 7",
                  "y": 0,
                },
                Object {
                  "label": "7 sockets on Jun 8
 +7 from previous day",
                  "x": "Jun 8",
                  "y": 7,
                },
                Object {
                  "label": "0 sockets on Jun 9
 -7 from previous day",
                  "x": "Jun 9",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 10",
                  "x": "Jun 10",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 11",
                  "x": "Jun 11",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 12",
                  "x": "Jun 12",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 13",
                  "x": "Jun 13",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 14",
                  "x": "Jun 14",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 15",
                  "x": "Jun 15",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 16",
                  "x": "Jun 16",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 17",
                  "x": "Jun 17",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 18",
                  "x": "Jun 18",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 19",
                  "x": "Jun 19",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 20",
                  "x": "Jun 20",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 21",
                  "x": "Jun 21",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 22",
                  "x": "Jun 22",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 23",
                  "x": "Jun 23",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 24",
                  "x": "Jun 24",
                  "y": 0,
                },
                Object {
                  "label": "3 sockets on Jun 25
 +3 from previous day",
                  "x": "Jun 25",
                  "y": 3,
                },
                Object {
                  "label": "0 sockets on Jun 26
 -3 from previous day",
                  "x": "Jun 26",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 27",
                  "x": "Jun 27",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 28",
                  "x": "Jun 28",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 29",
                  "x": "Jun 29",
                  "y": 0,
                },
                Object {
                  "label": "0 sockets on Jun 30",
                  "x": "Jun 30",
                  "y": 0,
                },
              ]
            }
            labelComponent={
              <ChartTooltip
                height={20}
                labelComponent={
                  <ChartLabel
                    className="curiosity-usage-graph-tooltip-text"
                    dy={-1}
                  />
                }
                style={
                  Object {
                    "fontSize": 14,
                  }
                }
                theme={
                  Object {
                    "area": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "#151515",
                          "fillOpacity": 0.4,
                          "stroke": "transparent",
                          "strokeWidth": 2,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "axis": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "axis": Object {
                          "fill": "transparent",
                          "stroke": "#d2d2d2",
                          "strokeLinecap": "round",
                          "strokeLinejoin": "round",
                          "strokeWidth": 1,
                        },
                        "axisLabel": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 100,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                        "grid": Object {
                          "fill": "none",
                          "pointerEvents": "painted",
                          "stroke": "none",
                          "strokeLinecap": "round",
                          "strokeLinejoin": "round",
                        },
                        "tickLabels": Object {
                          "fill": "#4d5258",
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "ticks": Object {
                          "fill": "transparent",
                          "size": 5,
                          "stroke": "none",
                          "strokeLinecap": "round",
                          "strokeLinejoin": "round",
                          "strokeWidth": 1,
                        },
                      },
                      "width": 450,
                    },
                    "bar": Object {
                      "barWidth": 10,
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "#151515",
                          "padding": 8,
                          "stroke": "none",
                          "strokeWidth": 0,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                      },
                      "width": 450,
                    },
                    "boxplot": Object {
                      "boxWidth": 20,
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "max": Object {
                          "padding": 8,
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "maxLabels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "median": Object {
                          "padding": 8,
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "medianLabels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "min": Object {
                          "padding": 8,
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "minLabels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "q1": Object {
                          "fill": "#8b8d8f",
                          "padding": 8,
                        },
                        "q1Labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "q3": Object {
                          "fill": "#8b8d8f",
                          "padding": 8,
                        },
                        "q3Labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                      },
                      "width": 450,
                    },
                    "candlestick": Object {
                      "candleColors": Object {
                        "negative": "#151515",
                        "positive": "#fff",
                      },
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "chart": Object {
                      "height": 300,
                      "padding": 50,
                      "width": 450,
                    },
                    "errorbar": Object {
                      "borderWidth": 8,
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "transparent",
                          "opacity": 1,
                          "stroke": "#151515",
                          "strokeWidth": 2,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "group": Object {
                      "height": 300,
                      "padding": 50,
                      "width": 450,
                    },
                    "legend": Object {
                      "gutter": 20,
                      "orientation": "horizontal",
                      "style": Object {
                        "data": Object {
                          "type": "square",
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                        },
                        "title": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 2,
                          "stroke": "transparent",
                        },
                      },
                      "titleOrientation": "top",
                    },
                    "line": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "transparent",
                          "opacity": 1,
                          "stroke": "#151515",
                          "strokeWidth": 2,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "pie": Object {
                      "height": 230,
                      "padding": 8,
                      "style": Object {
                        "data": Object {
                          "padding": 8,
                          "stroke": "transparent",
                          "strokeWidth": 1,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 8,
                          "stroke": "transparent",
                        },
                      },
                      "width": 230,
                    },
                    "scatter": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "#151515",
                          "opacity": 1,
                          "stroke": "transparent",
                          "strokeWidth": 0,
                        },
                        "labels": Object {
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 10,
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                    "stack": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "strokeWidth": 1,
                        },
                      },
                      "width": 450,
                    },
                    "tooltip": Object {
                      "cornerRadius": 0,
                      "flyoutStyle": Object {
                        "cornerRadius": 0,
                        "fill": "#151515",
                        "pointerEvents": "none",
                        "stroke": "#151515",
                        "strokeWidth": 0,
                      },
                      "pointerLength": 3,
                      "pointerWidth": 15,
                      "style": Object {
                        "fill": "#ededed",
                        "padding": 16,
                        "pointerEvents": "none",
                      },
                    },
                    "voronoi": Object {
                      "height": 300,
                      "padding": 50,
                      "style": Object {
                        "data": Object {
                          "fill": "transparent",
                          "stroke": "transparent",
                          "strokeWidth": 0,
                        },
                        "flyout": Object {
                          "fill": "#151515",
                          "pointerEvents": "none",
                          "stroke": "#151515",
                          "strokeWidth": 1,
                        },
                        "labels": Object {
                          "fill": "#ededed",
                          "fontFamily": "overpass, overpass, open sans, -apple-system, blinkmacsystemfont, Segoe UI, roboto, Helvetica Neue, arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
                          "fontSize": 14,
                          "letterSpacing": "normal",
                          "padding": 8,
                          "pointerEvents": "none",
                          "stroke": "transparent",
                          "textAnchor": "middle",
                        },
                      },
                      "width": 450,
                    },
                  }
                }
                width={80}
              />
            }
          />
        </ChartStack>
      </Chart>
    </div>
  </CardBody>
</Card>
`;

exports[`RhelGraphCard Component should render multiple states: pending 1`] = `
<Card
  className="curiosity-usage-graph fadein"
>
  <CardHead>
    <h2>
      Daily CPU socket usage
    </h2>
    <CardActions>
      <Label
        className="curiosity-usage-graph-label"
      >
        Last 30 Days
      </Label>
    </CardActions>
  </CardHead>
  <CardBody>
    <div
      className="curiosity-skeleton-container"
    >
      <Skeleton
        size="xs"
      />
      <Skeleton
        size="sm"
      />
      <Skeleton
        size="md"
      />
      <Skeleton
        size="lg"
      />
    </div>
  </CardBody>
</Card>
`;
